<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/variant_background"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_close"
            app:tint="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/font"
            android:text="@string/take_a_photo_of_the_finished_drawing_to_move_to_the_next_level"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="154dp"
            android:layout_marginTop="8dp"
            android:layout_height="154dp"
            android:src="@drawable/badge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/font"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/advanced"
            android:textColor="@color/gold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/its_not_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="@string/it_s_not_finished_yet"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/take_photo"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/font"
            android:layout_marginHorizontal="20dp"
            android:text="@string/take_a_photo"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
