<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/variant_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/privacy_policy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/font"
            android:text="@string/time_is_up"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="@string/you_need_to_watch_an_add_to_continue_drawing"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="36dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/font"
            android:text="@string/watch"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
