<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/variant_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_close"
            app:tint="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/font"
            android:text="@string/great"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/font"
            android:text="@string/you_can_track_your_progress_and_upload_new_finished_sketches_in_the_my_creation_section"
            android:textColor="@color/text" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/take_another_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="@string/take_another_photo"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/save_photo"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/font"
            android:layout_marginHorizontal="20dp"
            android:text="@string/save_and_exit"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
