<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="16dp"
    app:cardCornerRadius="30dp"
    android:layout_height="450dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <TextView
            android:id="@+id/privacy_policy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/font"
            android:text="@string/privacy_policy"
            android:textColor="@color/primary_dark"
            android:textSize="19sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/okay"
            android:background="#07000000"
            android:layout_below="@id/privacy_policy_title">

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font"
                android:text="@string/get_started_desc"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </ScrollView>


        <Button
            android:id="@+id/okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="2dp"
            android:layout_marginHorizontal="26dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/font"
            android:text="@string/okay"
            android:textColor="@color/white" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
