<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/tip_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/tip_image_1" />

            <TextView
                android:id="@+id/tip_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tip_image"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/font"
                android:text="@string/get_started_title"
                android:textColor="@color/text"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/tip_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/tip_title"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/font"
                android:text="@string/get_started_desc"
                android:textColor="@color/text"
                android:textSize="15.5sp" />

            <Button
                android:id="@+id/get_started"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/tip_desc"
                android:layout_marginHorizontal="26dp"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/font"
                android:text="@string/get_started"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/get_started"
                android:layout_marginHorizontal="26dp"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:text="@string/privacy_notice"
                android:textColor="@color/text"
                android:textSize="16sp" />


            <RelativeLayout
                android:id="@+id/ntv"
                android:layout_width="match_parent"
                android:layout_below="@id/privacy"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp">

                <include layout="@layout/include_native_button_top" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
